creusot/tests/should_fail/impure_functions.stderr
error: called Program function in Logic { prophetic: false } context "std::vec::Vec::<T, A>::len"
 --> impure_functions.rs:6:19
  |
6 |     pearlite! { v.len()@ }
  |                   ^^^

error: called Logic { prophetic: false } function in Program context "x"
  --> impure_functions.rs:10:13
   |
10 |     let _ = x(&Vec::<()>::new());
   |             ^

error: aborting due to 2 previous errors

